--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/PostDetailPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/PostDetailPage.xaml
@@ -74,7 +74,7 @@
                         <!--Media-->
                         <StackLayout Grid.Row="2">
                             <ff:CachedImage x:Name="PostImage" Source="{Binding CurrentPost.PostImage}" 
-                                            Margin="1" Aspect="AspectFill" HeightRequest="230">
+                                            Margin="1" Aspect="AspectFill" HeightRequest="300">
                                 <ff:CachedImage.GestureRecognizers>
                                     <TapGestureRecognizer x:Name="OnDisplayImage" Command="{Binding DisplayImageCommand}"/>
                                 </ff:CachedImage.GestureRecognizers>
@@ -128,7 +128,7 @@
 
             </ScrollView>
 
-            <StackLayout VerticalOptions="EndAndExpand">
+            <StackLayout VerticalOptions="EndAndExpand" BackgroundColor="#FAF8FA">
                 <!--Comment Input-->
                 <StackLayout Grid.Row="2" VerticalOptions="EndAndExpand">
                     <Grid Margin="2">
@@ -140,20 +140,31 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <Editor Grid.Row="0" Grid.Column="0" Margin="0" 
-                        Placeholder="Write a comment..." FontSize="Medium"
-                        VerticalOptions="Center"
-                        WidthRequest="330" x:Name="EntComment" Text="{Binding Comment.Body, Mode=TwoWay}"/>
+                        <StackLayout Grid.Row="0" Grid.Column="0" 
+                                     Margin="0">
+                            <Editor Margin="3"
+                                    Placeholder="Write a comment..." FontSize="Medium"
+                                    VerticalOptions="Center"
+                                    WidthRequest="330" x:Name="EntComment" 
+                                    Text="{Binding Comment.Body, Mode=TwoWay}"/>
+                        </StackLayout>
 
-                        <Image Grid.Row="0" Grid.Column="1" Margin="0" VerticalOptions="Center"
-                    HorizontalOptions="EndAndExpand" Source="send.png" 
-                    WidthRequest="35"
-                    HeightRequest="35"
-                    Aspect="AspectFit">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer x:Name="SaveComment" Command="{Binding SaveCommand}"/>
-                            </Image.GestureRecognizers>
-                        </Image>
+                        <StackLayout Grid.Row="0" Grid.Column="1" 
+                                     Margin="0" VerticalOptions="Center"
+                                     HorizontalOptions="EndAndExpand">
+                            <Image Grid.Row="0" Grid.Column="1" Margin="3" VerticalOptions="Center"
+                                    HorizontalOptions="EndAndExpand" Source="send.png" 
+                                    WidthRequest="35"
+                                    HeightRequest="35"
+                                    Aspect="AspectFit">
+                                <Image.GestureRecognizers>
+                                    <TapGestureRecognizer x:Name="SaveComment" Command="{Binding SaveCommand}"/>
+                                </Image.GestureRecognizers>
+                            </Image>
+                        </StackLayout>
+                        
+
+                        
                     </Grid>
 
                 </StackLayout>
